Major refactoring after meeting // TODO: reset button

--- a/code/SchulteTable/SchulteTable.ioc
+++ b/code/SchulteTable/SchulteTable.ioc
@@ -9,29 +9,28 @@ Mcu.IP1=RCC
 Mcu.IP2=RTC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA7
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PA15
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_RTC_VS_RTC_Activate
-Mcu.Pin16=VP_SYS_VS_ND
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin2=PB0
-Mcu.Pin3=PB1
-Mcu.Pin4=PB12
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=18
+Mcu.Pin0=PA1
+Mcu.Pin1=PA5
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_RTC_VS_RTC_Activate
+Mcu.Pin13=VP_SYS_VS_ND
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA7
+Mcu.Pin3=PB12
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -39,6 +38,7 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.EXTI9_5_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -47,53 +47,43 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_PuPd
-PA11.GPIO_PuPd=GPIO_PULLUP
-PA11.Locked=true
-PA11.Signal=GPIO_Input
-PA12.GPIOParameters=GPIO_PuPd
-PA12.GPIO_PuPd=GPIO_PULLUP
-PA12.Locked=true
-PA12.Signal=GPIO_Input
-PA13.GPIOParameters=GPIO_PuPd
-PA13.GPIO_PuPd=GPIO_PULLUP
-PA13.Locked=true
-PA13.Signal=GPIO_Input
-PA14.GPIOParameters=GPIO_PuPd
-PA14.GPIO_PuPd=GPIO_PULLUP
-PA14.Locked=true
-PA14.Signal=GPIO_Input
-PA15.GPIOParameters=GPIO_PuPd
-PA15.GPIO_PuPd=GPIO_PULLUP
-PA15.Locked=true
-PA15.Signal=GPIO_Input
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_PuPd
-PB0.GPIO_PuPd=GPIO_PULLUP
-PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd
-PB1.GPIO_PuPd=GPIO_PULLUP
-PB1.Locked=true
-PB1.Signal=GPIO_Input
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB7.GPIOParameters=PinState
+PB6.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.Locked=true
+PB6.Signal=GPXTI6
+PB7.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Locked=true
-PB7.PinState=GPIO_PIN_RESET
-PB7.Signal=GPIO_Output
+PB7.Signal=GPXTI7
+PB8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPXTI8
+PB9.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPXTI9
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -122,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -141,12 +131,27 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=8000000
 RCC.USBFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=2.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
+TIM2.Period=127
+TIM2.Prescaler=127
+TIM2.Pulse-PWM\ Generation2\ CH2=63
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -155,5 +160,7 @@ VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
