--- a/code/SchulteTable/SchulteTable.ioc
+++ b/code/SchulteTable/SchulteTable.ioc
@@ -23,11 +23,11 @@ Mcu.Pin13=VP_SYS_VS_ND
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA7
-Mcu.Pin3=PB12
-Mcu.Pin4=PB13
-Mcu.Pin5=PB14
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
 Mcu.Pin8=PB6
 Mcu.Pin9=PB7
 Mcu.PinsNb=16
@@ -52,18 +52,18 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.Locked=true
+PA13.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB12.Locked=true
-PB12.Signal=GPIO_Output
-PB13.Locked=true
-PB13.Signal=GPIO_Output
-PB14.Locked=true
-PB14.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB6.GPIO_PuPd=GPIO_PULLUP
@@ -112,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
