--- a/code/SchulteTable/SchulteTable.ioc
+++ b/code/SchulteTable/SchulteTable.ioc
@@ -6,29 +6,29 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA1
-Mcu.Pin1=PA3
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_SYS_VS_ND
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=14
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_ND
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA1
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -78,6 +78,10 @@ PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
 PB9.Signal=GPXTI9
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -135,8 +139,8 @@ SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
@@ -148,8 +152,6 @@ TIM2.Prescaler=127
 TIM2.Pulse-PWM\ Generation2\ CH2=63
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
